--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-        <p><a href="{% url 'logout' %}">logout</a></p>
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
-{% endif %}
+    {% if news_list %}
+        {% for news in news_list %}
+            <div class="jumbotron">
+            <h3>{{ news.title }}</h3>
+            <img src="{{ news.image.url }}">
+            <p>{{ news.description }}</p>
+            </div>
+        {% endfor %}
+    {% else %}
+        <h3>You have no news</h3>
+    {% endif %}
 {% endblock %}
